# scrollgt

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
baselines/: BASELINES.md
data/pherc1667_merged_columns/: README.md  columns.json  meta.json
data/scroll1_20230702185753/: meta.json
data/scroll1_20230702185753_y7000_x4000/: meta.json
data/scroll1_20231210121321/: meta.json
notebooks/: quickstart.ipynb
src/scrollgt/: __init__.py  cli.py  columns.py  compliance.py  metrics.py  score.py
tests/: test_columns.py  test_compliance.py  test_metrics.py  test_score.py
